[package]
name = "callipe-rs"
version = "0.1.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
edition = "2018"

description = "Metrics collector in the vein of telegraf written in rust."
documentation = "https://docs.rs/callipe-rs/"
homepage = "https://github.com/AlexanderThaller/callipe-rs"
readme = "README.md"
repository = "https://github.com/AlexanderThaller/callipe-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
systemstat = "0.1"
