[package]
name = "callipe-rs"
version = "0.1.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
edition = "2021"

description = "Metrics collector in the vein of telegraf written in rust."
documentation = "https://docs.rs/callipe-rs/"
homepage = "https://github.com/AlexanderThaller/callipe-rs"
readme = "README.md"
repository = "https://github.com/AlexanderThaller/callipe-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.5"
chrono = "0.4"
hyper = "0.14"
num_cpus = "1"
prometheus = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
systemstat = { git = "https://github.com/AlexanderThaller/systemstat/", branch = "add-cpu-time-to-platform-trait" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"
